package at.aau.se2.model.characters;

import at.aau.se2.model.Actioncard;

public class Archer extends Actioncard {
    public Archer(){
        this.name = "Bogenschütze";
    }
}
