package at.aau.se2.model.characters;

import at.aau.se2.model.Actioncard;

public class Fighter extends Actioncard {
    public Fighter(){
        this.name = "Schwertkämpfer";
    }
}
