package at.aau.se2.model.characters;

import at.aau.se2.model.Actioncard;

public class Hero extends Actioncard {
    public Hero(){
        this.name = "Held";
    }
}
