package at.aau.se2.model.characters;

import at.aau.se2.model.Actioncard;

public class Knight extends Actioncard {
    public Knight(){
        this.name = "Ritter";
    }
}
