package at.aau.se2.model.monsters;

import at.aau.se2.model.Monster;

public class Bullrog extends Monster {
    public Bullrog(int zone, int ring){
        super(zone, ring);
        this.name = "Bullrog";
    }
}
