package at.aau.se2.model.towers;

import at.aau.se2.model.Tower;

public class TowerImpl extends Tower {
    public TowerImpl(){
        this.lifepoints = 3;
    }
}
